--- a/SyncSaberService/SyncSaberService.csproj
+++ b/SyncSaberService/SyncSaberService.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Config.cs" />
     <Compile Include="DownloadBatch.cs" />
+    <Compile Include="Downloaders\AsyncCookieCache.cs" />
     <Compile Include="Downloaders\BeastSaverDownloader.cs" />
     <Compile Include="DownloadJob.cs" />
     <Compile Include="Downloaders\IFeedDownloader.cs" />
