--- a/SyncSaberService/SyncSaberService.csproj
+++ b/SyncSaberService/SyncSaberService.csproj
@@ -46,11 +46,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
-    <Compile Include="DownloadBatch.cs" />
-    <Compile Include="Downloaders\AsyncCookieCache.cs" />
-    <Compile Include="Downloaders\BeastSaverDownloader.cs" />
-    <Compile Include="DownloadJob.cs" />
-    <Compile Include="Downloaders\IFeedDownloader.cs" />
+    <Compile Include="Web\DownloadBatch.cs" />
+    <Compile Include="Web\AsyncCookieCache.cs" />
+    <Compile Include="Web\BeastSaverDownloader.cs" />
+    <Compile Include="Web\DownloadJob.cs" />
+    <Compile Include="Web\IFeedDownloader.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Playlist.cs" />
     <Compile Include="PlaylistIO.cs" />
