--- a/SyncSaberService/SyncSaberService.csproj
+++ b/SyncSaberService/SyncSaberService.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Utilities.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Web\WebUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="ini-parser">
