--- a/SyncSaberService/SyncSaberService.csproj
+++ b/SyncSaberService/SyncSaberService.csproj
@@ -58,13 +58,12 @@
     <Compile Include="Web\AsyncCookieCache.cs" />
     <Compile Include="Web\BeastSaberReader.cs" />
     <Compile Include="Web\DownloadJob.cs" />
-    <Compile Include="Web\IFeedDownloader.cs" />
+    <Compile Include="Web\IFeedReader.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Playlist.cs" />
     <Compile Include="PlaylistIO.cs" />
     <Compile Include="PlaylistSong.cs" />
-    <Compile Include="SongInfo.cs" />
-    <Compile Include="SongListUtils.cs" />
+    <Compile Include="Data\SongInfo.cs" />
     <Compile Include="SyncSaber.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="Program.cs" />
