Data models for each scrape type

--- a/SyncSaberService/SyncSaberService.csproj
+++ b/SyncSaberService/SyncSaberService.csproj
@@ -53,8 +53,10 @@
     <Compile Include="Config.cs" />
     <Compile Include="Data\JsonConverters.cs" />
     <Compile Include="Data\ScoreSaberSong.cs" />
+    <Compile Include="Data\IScrapedDataModel.cs" />
     <Compile Include="Data\ScrapedDataProvider.cs" />
     <Compile Include="Data\SongInfo.cs" />
+    <Compile Include="Data\SyncSaberScrape.cs" />
     <Compile Include="SimpleJson.cs" />
     <Compile Include="Web\BeatSaverReader.cs" />
     <Compile Include="Web\DownloadBatch.cs" />
