--- a/SyncSaberLib/SyncSaberLib.csproj
+++ b/SyncSaberLib/SyncSaberLib.csproj
@@ -54,10 +54,12 @@
     <Compile Include="Config.cs" />
     <Compile Include="Data\BeatSaverScrape.cs" />
     <Compile Include="Data\JsonConverters.cs" />
+    <Compile Include="Data\ScoreSaberScrape.cs" />
     <Compile Include="Data\ScoreSaberSong.cs" />
     <Compile Include="Data\IScrapedDataModel.cs" />
     <Compile Include="Data\ScrapedDataProvider.cs" />
     <Compile Include="Data\SongInfo.cs" />
+    <Compile Include="Data\SongInfoProvider.cs" />
     <Compile Include="Data\SyncSaberScrape.cs" />
     <Compile Include="SimpleJson.cs" />
     <Compile Include="Web\BeatSaverReader.cs" />
@@ -69,7 +71,7 @@
     <Compile Include="Playlist.cs" />
     <Compile Include="PlaylistIO.cs" />
     <Compile Include="PlaylistSong.cs" />
-    <Compile Include="Data\SongInfoEnhanced.cs" />
+    <Compile Include="Data\BeatSaverSong.cs" />
     <Compile Include="SyncSaber.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
