Tweaked default settings.

--- a/SyncSaberConsole/SyncSaberConsole.csproj
+++ b/SyncSaberConsole/SyncSaberConsole.csproj
@@ -88,12 +88,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ScrapedData\BeatSaverScrape.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="ScrapedData\ScoreSaberScrape.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <None Include="ScrapedData\BeatSaverScrape.json" />
+    <None Include="ScrapedData\ScoreSaberScrape.json" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json">
