--- a/SyncSaberLib/SyncSaberLib.csproj
+++ b/SyncSaberLib/SyncSaberLib.csproj
@@ -88,12 +88,15 @@
     <Compile Include="Config.cs" />
     <Compile Include="Data\BeatSaverScrape.cs" />
     <Compile Include="Data\JsonConverters.cs" />
+    <Compile Include="Data\ScoreSaberDifficulty.cs" />
     <Compile Include="Data\ScoreSaberScrape.cs" />
     <Compile Include="Data\ScoreSaberSong.cs" />
     <Compile Include="Data\IScrapedDataModel.cs" />
     <Compile Include="Data\ScrapedDataProvider.cs" />
+    <Compile Include="Data\SongDataContext.cs" />
     <Compile Include="Data\SongInfo.cs" />
     <Compile Include="Data\SongInfoProvider.cs" />
+    <Compile Include="Data\Song.cs" />
     <Compile Include="Data\SyncSaberScrape.cs" />
     <Compile Include="Web\BeatSaverReader.cs" />
     <Compile Include="Web\DownloadBatch.cs" />
@@ -114,6 +117,9 @@
   <ItemGroup>
     <PackageReference Include="ini-parser">
       <Version>2.5.2</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
+      <Version>2.2.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Tpl.Dataflow">
       <Version>4.5.24</Version>
