--- a/SyncSaberConsole/SyncSaberConsole.csproj
+++ b/SyncSaberConsole/SyncSaberConsole.csproj
@@ -90,6 +90,12 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Catel.Core">
+      <Version>5.10.0</Version>
+    </PackageReference>
+    <PackageReference Include="Catel.MVVM">
+      <Version>5.10.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.2</Version>
     </PackageReference>
