--- a/DataGUITests/DataGUITests.csproj
+++ b/DataGUITests/DataGUITests.csproj
@@ -104,6 +104,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore">
       <Version>2.2.4</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
+      <Version>2.2.4</Version>
+    </PackageReference>
     <PackageReference Include="Orc.FilterBuilder">
       <Version>3.1.1</Version>
     </PackageReference>
