--- a/DataGUITests/DataGUITests.csproj
+++ b/DataGUITests/DataGUITests.csproj
@@ -64,6 +64,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DataConverters\ScoreSaberConverters.cs" />
+    <Compile Include="Extensions\IQueryableExtensions.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
