Started work on converting BeatSaverReader

--- a/FeedReaderTests/FeedReaderTests.csproj
+++ b/FeedReaderTests/FeedReaderTests.csproj
@@ -26,6 +26,9 @@
     <None Update="Data\ScoreSaberPage.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Data\BeatSaberListPage.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
