Added a few tests, slight change to rate limit parsing

--- a/FeedReaderTests/FeedReaderTests.csproj
+++ b/FeedReaderTests/FeedReaderTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -26,7 +26,10 @@
     <None Update="Data\ScoreSaberPage.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Data\BeatSaberListPage.json">
+    <None Update="Data\BeatSaverListPage.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\BeatSaverSingleSong.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
