--- a/FeedReader/FeedReader.csproj
+++ b/FeedReader/FeedReader.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebUtilities\WebUtilities.csproj" />
+  </ItemGroup>
+
 </Project>
