Updated BeatSaberDataProvider submodule

--- a/SyncSaberLib/SyncSaberLib.csproj
+++ b/SyncSaberLib/SyncSaberLib.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -13,8 +13,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BeatSaberDataProvider\BeatSaberDataProvider\BeatSaberDataProvider.csproj" />
-    <ProjectReference Include="..\FeedReader\FeedReader.csproj" />
-    <ProjectReference Include="..\WebUtilities\WebUtilities.csproj" />
   </ItemGroup>
 
 </Project>
